Fix run task